[gd_scene load_steps=27 format=3 uid="uid://bq1txr4ss18o1"]

[ext_resource type="Script" path="res://scenes/levels/level10_2/level_10_2.gd" id="1_qbibt"]
[ext_resource type="Texture2D" uid="uid://d3wpbjhq33gew" path="res://assets/tiles/level_2/photo_2024-02-04_18-58-29.jpg" id="1_qyefd"]
[ext_resource type="Texture2D" uid="uid://brlcmm10k7mow" path="res://assets/tiles/level_2/photo_2024-02-04_18-58-27.jpg" id="2_d1rh0"]
[ext_resource type="Texture2D" uid="uid://cm0hvrqdek6gr" path="res://assets/tiles/level_2/photo_2024-02-04_18-58-28.jpg" id="3_cynpg"]
[ext_resource type="PackedScene" uid="uid://cxni5k1segup4" path="res://scenes/levels/level10_2/animal_10_2.tscn" id="4_q1xtd"]
[ext_resource type="PackedScene" uid="uid://bxwboaoquym2d" path="res://scenes/levels/level1/food.tscn" id="5_m1uy5"]
[ext_resource type="PackedScene" uid="uid://udtx3igc8fd0" path="res://scenes/hud/level10/hud10.tscn" id="7_ljfaw"]
[ext_resource type="PackedScene" uid="uid://c8xndja5h6jji" path="res://scenes/levels/level10_2/who_are_you2.tscn" id="8_n2lt8"]
[ext_resource type="PackedScene" uid="uid://c4bmqqyc5e14m" path="res://scenes/hud/level10_2/hide_in_water_2.tscn" id="9_rrjah"]
[ext_resource type="PackedScene" uid="uid://rqddclj5bbb2" path="res://scenes/hud/level10_2/hide_in_cave_2.tscn" id="10_1rve2"]
[ext_resource type="PackedScene" uid="uid://bi8f20joc6ytw" path="res://scenes/hud/level10_2/hide_in_nora_2.tscn" id="11_cq4l6"]
[ext_resource type="PackedScene" uid="uid://dto7km2xcawwc" path="res://scenes/objects/cave.tscn" id="11_eje22"]
[ext_resource type="PackedScene" uid="uid://dgkv20v8qocv1" path="res://scenes/hud/level10_2/hide_in_custs_2.tscn" id="12_bisie"]
[ext_resource type="PackedScene" uid="uid://xfur6h5a3h8j" path="res://scenes/objects/nora.tscn" id="12_i0nbe"]
[ext_resource type="PackedScene" uid="uid://wmpey0wams75" path="res://scenes/objects/cust3.tscn" id="13_iby33"]
[ext_resource type="PackedScene" uid="uid://bgpb0f26dch8k" path="res://scenes/hunters_objects/hunter9.tscn" id="14_dvlaf"]
[ext_resource type="Script" path="res://scenes/hunters_objects/hunter10.gd" id="15_qmdgy"]
[ext_resource type="PackedScene" uid="uid://dnw0cfb4rnq5n" path="res://scenes/objects/tree.tscn" id="16_8ynml"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k75r6"]
texture = ExtResource("1_qyefd")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kvxia"]
texture = ExtResource("2_d1rh0")
texture_region_size = Vector2i(256, 256)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qys15"]
texture = ExtResource("3_cynpg")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_labha"]
tile_size = Vector2i(256, 256)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/1 = SubResource("TileSetAtlasSource_kvxia")
sources/0 = SubResource("TileSetAtlasSource_k75r6")
sources/2 = SubResource("TileSetAtlasSource_qys15")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yphjm"]
size = Vector2(4355.75, 98)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvc00"]
size = Vector2(654, 438)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3iav"]
size = Vector2(269, 138.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmgul"]
size = Vector2(269, 138.75)

[node name="level 10" type="Node2D"]
script = ExtResource("1_qbibt")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_labha")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 1, 0, 0, 65536, 65536, 0, 131072, 65536, 0, 196608, 65537, 0, 65537, 0, 0, 131073, 0, 0, 196609, 65537, 0, 65538, 65536, 0, 65539, 0, 0, 65540, 65536, 0, 65541, 0, 0, 65542, 65536, 0, 65543, 0, 0, 65544, 65536, 0, 131074, 65536, 0, 196610, 65537, 0, 131075, 0, 0, 131076, 65536, 0, 131077, 0, 0, 131078, 65536, 0, 131079, 0, 0, 131080, 65536, 0, 262145, 65537, 0, 262146, 65537, 0, 196611, 65537, 0, 196612, 65537, 0, 196613, 65537, 0, 196614, 65537, 0, 196615, 65537, 0, 196616, 65537, 0, 262144, 65537, 0, 262147, 65537, 0, 262148, 65537, 0, 262149, 65537, 0, 327680, 65537, 0, 327681, 65537, 0, 327682, 65537, 0, 327683, 65537, 0, 393216, 65537, 0, 393217, 65537, 0, 393218, 65537, 0, 393219, 65537, 0, 393220, 65537, 0, 327684, 65537, 0, 327685, 65537, 0, 458757, 65537, 0, 458756, 65537, 0, 458755, 65537, 0, 458754, 65537, 0, 524290, 65537, 0, 458752, 65537, 0, 458753, 65537, 0, 524289, 65537, 0, 524288, 65537, 0, 524292, 65537, 0, 524293, 65537, 0, 524294, 65537, 0, 458758, 65537, 0, 393222, 65537, 0, 327686, 65537, 0, 262150, 65537, 0, 524291, 65537, 0, 589827, 65537, 0, 589828, 65537, 0, 589829, 65537, 0, 589830, 65537, 0, 589831, 65537, 0, 458759, 65537, 0, 393223, 65537, 0, 327687, 65537, 0, 262151, 65537, 0, 458761, 65537, 0, 393225, 65537, 0, 327689, 65537, 0, 262153, 65537, 0, 196617, 65537, 0, 458760, 65537, 0, 393224, 65537, 0, 327688, 65537, 0, 262152, 65537, 0, 524295, 65537, 0, 524296, 65537, 0, 524297, 65537, 0, 524298, 65537, 0, 524299, 65537, 0, 524300, 65537, 0, 458762, 65537, 0, 458763, 65537, 0, 393227, 65537, 0, 327691, 65537, 0, 327692, 65537, 0, 458764, 65537, 0, 393228, 65537, 0, 393229, 65537, 0, 524301, 65537, 0, 458765, 65537, 0, 393230, 65537, 0, 327693, 65537, 0, 327694, 65537, 0, 327695, 65537, 0, 393231, 65537, 0, 458767, 65537, 0, 458766, 65537, 0, 393226, 65537, 0, 327690, 65537, 0, 262154, 65537, 0, 262155, 65537, 0, 262156, 65537, 0, 196620, 65537, 0, 262157, 65537, 0, 262158, 65537, 0, 262159, 65537, 0, 262160, 65537, 0, 327696, 65537, 0, 393232, 65537, 0, 458768, 65537, 0, 131084, 65536, 0, 196624, 65537, 0, 131088, 0, 0, 65552, 65536, 0, 16, 0, 0, 2, 65536, 0, 3, 0, 0, 4, 65536, 0, 5, 0, 0, 6, 65536, 0, 7, 0, 0, 8, 65536, 0, 9, 0, 0, 10, 65536, 0, 11, 0, 0, 12, 65536, 0, 13, 0, 0, 14, 65536, 0, 15, 0, 0, 65550, 65536, 0, 131086, 65536, 0, 65551, 0, 0, 131087, 0, 0, 196623, 65537, 0, 196622, 65537, 0, 196621, 65537, 0, 131085, 0, 0, 65549, 0, 0, 65548, 65536, 0, 65547, 0, 0, 65546, 65536, 0, 65545, 0, 0, 131081, 0, 0, 131082, 65536, 0, 131083, 0, 0, 196619, 65537, 0, 196618, 65537, 0, 524302, 65537, 0, 589838, 65537, 0, 589840, 65537, 0, 655376, 65537, 0, 720912, 65537, 0, 786448, 65537, 0, 524303, 65537, 0, 589839, 65537, 0, 655375, 65537, 0, 720911, 65537, 0, 786447, 65537, 0, 655374, 65537, 0, 655373, 65537, 0, 655372, 65537, 0, 655371, 65537, 0, 655370, 65537, 0, 655369, 65537, 0, 655368, 65537, 0, 655367, 65537, 0, 655366, 65537, 0, 655365, 65537, 0, 655364, 65537, 0, 655363, 65537, 0, 655362, 65537, 0, 589826, 65537, 0, 589824, 65537, 0, 655360, 65537, 0, 720896, 65537, 0, 589832, 65537, 0, 589833, 65537, 0, 589834, 65537, 0, 589835, 65537, 0, 589836, 65537, 0, 589837, 65537, 0, 720909, 65537, 0, 720908, 65537, 0, 720907, 65537, 0, 720906, 65537, 0, 720905, 65537, 0, 720904, 65537, 0, 720903, 65537, 0, 720902, 65537, 0, 720901, 65537, 0, 720910, 65537, 0, 786446, 65537, 0, 786445, 65537, 0, 851983, 65537, 0, 851982, 65537, 0, 851981, 65537, 0, 851980, 65537, 0, 851984, 65537, 0, 917520, 65537, 0, 917519, 65537, 0, 917518, 65537, 0, 917517, 65537, 0, 983056, 65537, 0, 1048592, 65537, 0, 1048591, 65537, 0, 1048590, 65537, 0, 1048589, 65537, 0, 1048588, 65537, 0, 983055, 65537, 0, 983054, 65537, 0, 983053, 65537, 0, 983052, 65537, 0, 917516, 65537, 0, 1048587, 65537, 0, 1048586, 65537, 0, 1048585, 65537, 0, 1048584, 65537, 0, 1048583, 65537, 0, 1048582, 65537, 0, 1048581, 65537, 0, 1048580, 65537, 0, 786432, 65537, 0, 851968, 65537, 0, 917504, 65537, 0, 983040, 65537, 0, 1048576, 65537, 0, 1048577, 65537, 0, 1048578, 65537, 0, 1048579, 65537, 0, 720900, 65537, 0, 786436, 65537, 0, 851972, 65537, 0, 917508, 65537, 0, 917507, 65537, 0, 917506, 65537, 0, 786433, 65537, 0, 786434, 65537, 0, 589825, 65537, 0, 655361, 65537, 0, 720897, 65537, 0, 720898, 65537, 0, 720899, 65537, 0, 786435, 65537, 0, 851971, 65537, 0, 851970, 65537, 0, 851969, 65537, 0, 917505, 65537, 0, 983041, 65537, 0, 983042, 65537, 0, 983043, 65537, 0, 983044, 65537, 0, 983045, 65537, 0, 983046, 65537, 0, 983047, 65537, 0, 917512, 65537, 0, 983048, 65537, 0, 851976, 65537, 0, 786440, 65537, 0, 786439, 65537, 0, 786438, 65537, 0, 851974, 65537, 0, 851975, 65537, 0, 917511, 65537, 0, 917510, 65537, 0, 917509, 65537, 0, 851973, 65537, 0, 786437, 65537, 0, 786444, 65537, 0, 786443, 65537, 0, 786442, 65537, 0, 851978, 65537, 0, 917514, 65537, 0, 851979, 65537, 0, 917515, 65537, 0, 983051, 65537, 0, 983050, 65537, 0, 983049, 65537, 0, 917513, 65537, 0, 851977, 65537, 0, 786441, 65537, 0, 393221, 65537, 0, -65536, 65536, 0, -65535, 0, 0, -65534, 65536, 0, -65533, 0, 0, -65532, 65536, 0, -65531, 0, 0, -65530, 65536, 0, -65529, 0, 0, -65528, 65536, 0, -65527, 0, 0, -65526, 65536, 0, -65525, 0, 0, -65524, 65536, 0, -65523, 0, 0, -65522, 65536, 0, -65521, 0, 0, -65520, 0, 0, 524304, 65537, 0, -65519, 65536, 0, 17, 65536, 0, 65553, 65536, 0, 131089, 65536, 0, 196625, 1, 0, 262161, 1, 0, 393233, 1, 0, 327697, 1, 0, 458769, 1, 0, 524305, 1, 0, 589841, 1, 0, 655377, 1, 0, 720913, 1, 0, 786449, 1, 0, 851985, 1, 0, 917521, 1, 0, 983057, 1, 0, 1048593, 1, 0, 1114129, 1, 0, 1114128, 1, 0, 1114127, 1, 0, 1114126, 1, 0, 1114125, 1, 0, 1114124, 1, 0, 1114123, 1, 0, 1114122, 1, 0, 1114121, 1, 0, 1114120, 1, 0, 1114119, 1, 0, 1114118, 1, 0, 1114117, 1, 0, 1114116, 1, 0, 1114115, 1, 0, 1114114, 1, 0, 1114113, 1, 0, 1114112, 1, 0, 1179647, 1, 0, 1114111, 1, 0, 1048575, 1, 0, 983039, 1, 0, 917503, 1, 0, 786431, 1, 0, 851967, 1, 0, 720895, 1, 0, 655359, 1, 0, 589823, 1, 0, 524287, 1, 0, 458751, 1, 0, 393215, 1, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 1, 0, 327679, 1, 0)

[node name="animal9" parent="." instance=ExtResource("4_q1xtd")]
position = Vector2(1060, 2372)

[node name="Camera2D" type="Camera2D" parent="animal9"]
position = Vector2(2.75, -5)
scale = Vector2(0.25, 0.25)
limit_left = 0
limit_top = 0
limit_right = 4352
limit_bottom = 4352

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(8704, 0)

[node name="Foods" type="Node2D" parent="."]
position = Vector2(4, 9)

[node name="Food" parent="Foods" instance=ExtResource("5_m1uy5")]
position = Vector2(605, 3962)

[node name="Food2" parent="Foods" instance=ExtResource("5_m1uy5")]
position = Vector2(1328, 1321)

[node name="Food3" parent="Foods" instance=ExtResource("5_m1uy5")]
position = Vector2(3683, 2529)

[node name="HUD" parent="." instance=ExtResource("7_ljfaw")]

[node name="HUD2" parent="." instance=ExtResource("8_n2lt8")]

[node name="HUD3" parent="." instance=ExtResource("9_rrjah")]

[node name="HUD4" parent="." instance=ExtResource("10_1rve2")]

[node name="HUD5" parent="." instance=ExtResource("11_cq4l6")]

[node name="HUD6" parent="." instance=ExtResource("12_bisie")]

[node name="TestArea" type="Area2D" parent="."]
position = Vector2(1363, 867)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestArea"]
position = Vector2(819.125, -59)
shape = SubResource("RectangleShape2D_yphjm")

[node name="decoration" type="Node" parent="."]

[node name="Node2D" parent="decoration" instance=ExtResource("11_eje22")]
position = Vector2(3928, 3784)

[node name="Node2D2" parent="decoration" instance=ExtResource("12_i0nbe")]
position = Vector2(456, 3592)

[node name="Node2D3" parent="decoration" instance=ExtResource("13_iby33")]
position = Vector2(200, 4136)

[node name="Node2D4" parent="decoration" instance=ExtResource("13_iby33")]
position = Vector2(4144, 1472)

[node name="Node2D5" parent="decoration" instance=ExtResource("13_iby33")]
position = Vector2(216, 1600)

[node name="Node2D6" parent="decoration" instance=ExtResource("13_iby33")]
position = Vector2(2688, 3648)

[node name="Node2D7" parent="decoration" instance=ExtResource("13_iby33")]
position = Vector2(2704, 1728)

[node name="CharacterBody2D" parent="decoration" instance=ExtResource("14_dvlaf")]
position = Vector2(2195, 3068)
script = ExtResource("15_qmdgy")

[node name="CharacterBody2D2" parent="decoration" instance=ExtResource("14_dvlaf")]
position = Vector2(2019, 1676)
script = ExtResource("15_qmdgy")

[node name="Node2D9" parent="decoration" instance=ExtResource("16_8ynml")]
position = Vector2(204, 3594)

[node name="Node2D10" parent="decoration" instance=ExtResource("16_8ynml")]
position = Vector2(2276, 4194)

[node name="Node2D11" parent="decoration" instance=ExtResource("16_8ynml")]
position = Vector2(260, 2122)

[node name="Node2D12" parent="decoration" instance=ExtResource("16_8ynml")]
position = Vector2(4092, 2122)

[node name="Node2D13" parent="decoration" instance=ExtResource("16_8ynml")]
position = Vector2(3476, 1306)

[node name="TestArea2" type="Area2D" parent="."]
position = Vector2(3758, 3376)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestArea2"]
position = Vector2(46, 373)
shape = SubResource("RectangleShape2D_xvc00")

[node name="TestArea3" type="Area2D" parent="."]
position = Vector2(419, 3434)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestArea3"]
position = Vector2(33.5, 156.375)
shape = SubResource("RectangleShape2D_v3iav")

[node name="TestArea4" type="Area2D" parent="."]
position = Vector2(4033, 1317)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestArea4"]
position = Vector2(33.5, 156.375)
shape = SubResource("RectangleShape2D_kmgul")

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0

[connection signal="area_shape_entered" from="TestArea" to="." method="_on_test_area_area_shape_entered"]
[connection signal="body_entered" from="TestArea" to="." method="_on_test_area_body_entered"]
[connection signal="body_entered" from="TestArea2" to="." method="_on_test_area_2_body_entered"]
[connection signal="body_entered" from="TestArea3" to="." method="_on_test_area_3_body_entered"]
[connection signal="body_entered" from="TestArea4" to="." method="_on_test_area_4_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
